# compfy

./: .gitignore  CONTRIBUTORS  LICENSE.spdx  README.md  compfy-dbus.desktop  compfy.desktop  compfy.sample.conf  flake.nix  meson.build  meson_options.txt  picom.sample.conf
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: issue-template.md
man/: compfy.1  compfy.1.asciidoc  compfy.md  meson.build  picom-trans.1.asciidoc  picom.1  picom.1.asciidoc
src/: atom.h  c2.c  c2.h  common.h  compfy.c  compfy.h  compfy.modulemap  config.c  config.h  config_libconfig.c  dbus.c  dbus.h  diagnostic.c  event.c  meson.build  opengl.c  opengl.h  options.c  picom.c  picom.modulemap  string_utils.c  update.c  utils.h  win.c  win.h  wm_check.c  wm_check.h
src/backend/: backend.c  backend_common.h
src/backend/gl/: egl.c  gl_common.c  gl_common.h  glx.c  shaders.c
src/backend/xrender/: xrender.c
